change all setting api to getting data from app